--- a/html/air pollution.html
+++ b/html/air pollution.html
@@ -1,12 +1,12 @@
 <html>
 <head>
 <title> Air pollution</title>
-<link rel="stylesheet" href="..\.\css\style1.css">
+<link rel="stylesheet" href="..\css\style1.css">
 </head>
 <body>
 <h1>AIR POLLUTION </h1>
 <div class="part1">
-<img src="..\.\pics\Air pollution.jpg" alt="Air pollution">
+<img src="..\pics\Air pollution.jpg" alt="Air pollution">
 <p>
  Air pollution is the presence of substances in the air that are harmful to humans, other living beings or the environment. Pollutants can be gases, like ozone or nitrogen oxides, or small particles like soot and dust. Both outdoor and indoor air can be polluted. Outdoor air pollution comes from burning fossil fuels for electricity and transport, wildfires, some industrial processes, waste management, demolition and agriculture. Indoor air pollution is often from burning firewood or agricultural waste for cooking and heating.Other sources of air pollution include dust storms and volcanic eruptions. Many sources of local air pollution, especially burning fossil fuels, also release greenhouse gases that cause global warming. However, air pollution may limit warming locally.
 </p>
