--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title> Types of pollution</title>
-<link rel="stylesheet" href="..\.\css\style.css">
+<link rel="stylesheet" href="..\css\style.css">
 </head>
 <body>
 <h1> POLLUTION </h1>
