--- a/html/soil pollution.html
+++ b/html/soil pollution.html
@@ -1,12 +1,12 @@
 <html>
 <head>
 <title> Soil pollution </title>
-<link rel="stylesheet" href="..\.\css\style1.css">
+<link rel="stylesheet" href="..\css\style1.css">
 </head>
 <body>
 <h1>SOIL POLLUTION </h1>
 <div class="part1">
-<img src="..\.\pics\soil pollution.jpg" alt="Soil pollution">
+<img src="..\pics\soil pollution.jpg" alt="Soil pollution">
 <p>
  Soil contamination, soil pollution, or land pollution as a part of land degradation is caused by the presence of xenobiotic (human-made) chemicals or other alteration in the natural soil environment. It is typically caused by industrial activity, agricultural chemicals or improper disposal of waste. The most common chemicals involved are petroleum hydrocarbons, polynuclear aromatic hydrocarbons (such as naphthalene and benzopyrene), solvents, pesticides, lead, and other heavy metals. Contamination is correlated with the degree of industrialization and intensity of chemical substance. The concern over soil contamination stems primarily from health risks, from direct contact with the contaminated soil, vapour from the contaminants, or from secondary contamination of water supplies within and underlying the soil.</p>
 </div>
