--- a/html/water pollution.html
+++ b/html/water pollution.html
@@ -1,12 +1,12 @@
 <html>
 <head>
 <title> Water pollution </title>
-<link rel="stylesheet" href="..\.\css\style1.css">
+<link rel="stylesheet" href="..\css\style1.css">
 </head>
 <body>
 <h1>WATER POLLUTION </h1>
 <div class="part1">
-<img src="..\.\pics\Water Pollution.jpg" alt="Water pollution">
+<img src="..\pics\Water Pollution.jpg" alt="Water pollution">
 <p>
 Water pollution is the contamination of water bodies, with a negative impact on their uses. It is usually a result of human activities. Water bodies include lakes, rivers, oceans, aquifers, reservoirs and groundwater. Water pollution results when contaminants mix with these water bodies. Contaminants can come from one of four main sources. These are sewage discharges, industrial activities, agricultural activities, and urban runoff including stormwater.  Water pollution may affect either surface water or groundwater. This form of pollution can lead to many problems. One is the degradation of aquatic ecosystems. Another is spreading water-borne diseases when people use polluted water for drinking or irrigation. Water pollution also reduces the ecosystem services such as drinking water provided by the water resource.</p>
 </div>
