--- a/noise pollution.html
+++ b/noise pollution.html
@@ -1,12 +1,12 @@
 <html>
 <head>
 <title> Noise pollution</title>
-<link rel="stylesheet" href="..\css\style1.css">
+<link rel="stylesheet" href="style1.css">
 </head>
 <body>
 <h1>NOISE POLLUTION </h1>
 <div class="part1">
-<img src="..\pics\Noise pollution.jpg" alt="Noise pollution">
+<img src="Noise pollution.jpg" alt="Noise pollution">
 <p>
  Noise pollution, or sound pollution, is the propagation of noise or sound with potential harmful effects on humans and animals. The source of outdoor noise worldwide is mainly caused by machines, transport and propagation systems. Poor urban planning may give rise to noise disintegration or pollution. Side-by-side industrial and residential buildings can result in noise pollution in the residential areas. Some of the main sources of noise in residential areas include loud music, transportation (traffic, rail, airplanes, etc.), lawn care maintenance, construction, electrical generators, wind turbines, explosions, and people. Documented problems associated with noise in urban environments go back as far as ancient Rome.Research suggests that noise pollution in the United States is the highest in low-income and racial minority neighborhoods,and noise pollution associated with household electricity generators is an emerging environmental degradation in many developing nations.</p>
 </div>
@@ -31,12 +31,12 @@
 </ul>
 </div>
 <div class="links">
-<button style="position: absolute; left: 0"><a href=".\water pollution.html" >PREVIOUS PAGE</a></button>
+<button style="position: absolute; left: 0"><a href="water pollution.html" >PREVIOUS PAGE</a></button>
 
 
-<button style="position: absolute; left: 45%"><a href=".\index.html">GO TO HOME PAGE</a></button>
+<button style="position: absolute; left: 45%"><a href="index.html">GO TO HOME PAGE</a></button>
 
-<button style="position: absolute; right: 0"><a href=".\plastic pollution.html">GO TO NEXT PAGE</a></button>
+<button style="position: absolute; right: 0"><a href="plastic pollution.html">GO TO NEXT PAGE</a></button>
 </div>
 </body>
 </html>
