--- a/plastic pollution.html
+++ b/plastic pollution.html
@@ -1,12 +1,12 @@
 <html>
 <head>
 <title>Plastic pollution</title>
-<link rel="stylesheet" href="..\css\style1.css">
+<link rel="stylesheet" href="style1.css">
 </head>
 <body>
 <h1>PLASTIC POLLUTION</h1>
 <div class="part1">
-<img src="..\pics\plastic pollution.jpg" alt="plastic pollution">
+<img src="plastic pollution.jpg" alt="plastic pollution">
 <p>
 Plastic pollution is the accumulation of plastic objects and particles (e.g. plastic bottles, bags and microbeads) in the Earth's environment that adversely affects humans, wildlife and their habitat.Plastics that act as pollutants are categorized by size into micro-, meso-, or macro debris. Plastics are inexpensive and durable, making them very adaptable for different uses; as a result, manufacturers choose to use plastic over other materials.However, the chemical structure of most plastics renders them resistant to many natural processes of degradation and as a result they are slow to degrade. Together, these two factors allow large volumes of plastic to enter the environment as mismanaged waste which persists in the ecosystem and travels throughout food webs.Plastic pollution can afflict land, waterways and oceans. It is estimated that 1.1 to 8.8 million tonnes of plastic waste enters the ocean from coastal communities each year. </p>
 </div>
@@ -32,9 +32,9 @@ Plastic pollution is the accumulation of plastic objects and particles (e.g. pla
 </ul>
 </div>
 <div class="links">
-<button style="position: absolute; left: 0"><a href=".\noise pollution.html" >PREVIOUS PAGE</a></button>
+<button style="position: absolute; left: 0"><a href="noise pollution.html" >PREVIOUS PAGE</a></button>
 
-<button style="position: absolute; right: 0"><a href=".\index.html">GO TO HOME PAGE</a></button>
+<button style="position: absolute; right: 0"><a href="index.html">GO TO HOME PAGE</a></button>
 
 </div>
 </body>
