--- a/soil pollution.html
+++ b/soil pollution.html
@@ -1,12 +1,12 @@
 <html>
 <head>
 <title> Soil pollution </title>
-<link rel="stylesheet" href="..\css\style1.css">
+<link rel="stylesheet" href="style1.css">
 </head>
 <body>
 <h1>SOIL POLLUTION </h1>
 <div class="part1">
-<img src="..\pics\soil pollution.jpg" alt="Soil pollution">
+<img src="soil pollution.jpg" alt="Soil pollution">
 <p>
  Soil contamination, soil pollution, or land pollution as a part of land degradation is caused by the presence of xenobiotic (human-made) chemicals or other alteration in the natural soil environment. It is typically caused by industrial activity, agricultural chemicals or improper disposal of waste. The most common chemicals involved are petroleum hydrocarbons, polynuclear aromatic hydrocarbons (such as naphthalene and benzopyrene), solvents, pesticides, lead, and other heavy metals. Contamination is correlated with the degree of industrialization and intensity of chemical substance. The concern over soil contamination stems primarily from health risks, from direct contact with the contaminated soil, vapour from the contaminants, or from secondary contamination of water supplies within and underlying the soil.</p>
 </div>
@@ -31,11 +31,11 @@ Urbanization and deforestation: The removal of vegetation cover exposes soil to 
 </ul>
 </div>
 <div class="links">
-<button style="position: absolute; left: 0"><a href=".\air pollution.html" >PREVIOUS PAGE</a></button>
+<button style="position: absolute; left: 0"><a href="air pollution.html" >PREVIOUS PAGE</a></button>
 
-<button style="position: absolute; left: 45%;"><a href=".\pollution.html">GO TO HOME PAGE</a></button>
+<button style="position: absolute; left: 45%;"><a href="pollution.html">GO TO HOME PAGE</a></button>
 
-<button style="position: absolute; right: 0"><a href=".\water pollution.html">GO TO NEXT PAGE</a></button>
+<button style="position: absolute; right: 0"><a href="water pollution.html">GO TO NEXT PAGE</a></button>
 </div>
 
 </body>
